fix dashboard issues #274; fix overflow issues #270; fix view event signatures #276

--- a/public/stylesheets/snorby.css
+++ b/public/stylesheets/snorby.css
@@ -5364,3 +5364,10 @@ div.map{
 /* @end */
 
 
+.row .address div{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 105px;
+}
+
